# dc2-pgo

./: .gitmodules  CMakeLists.txt
examples/: ChordalInitializationExample.cpp  MultiRobotExample.cpp  SingleRobotExample.cpp  SingleRobotGNCExample.cpp
include/DPGO/: DPGO_types.h  PGOAgent.h  PoseGraph.h  PriorSEMeasurement.h
src/: DPGO_solver.cpp  PGOAgent.cpp  PoseGraph.cpp  QuadraticOptimizer.cpp
tests/: CMakeLists.txt  testLineGraph.cpp  testOptimizationThread.cpp  testPGO.cpp  testTriangleGraph.cpp
